add login reset password page

--- a/deployment/themes/test/login/resources/css/login-reset-password.css
+++ b/deployment/themes/test/login/resources/css/login-reset-password.css
@@ -8,11 +8,15 @@
     font-family: "Montserrat", sans-serif;
 }
 body {
+    background: #b5b8bd;
+}
+
+main{
     width: 100%;
     min-height: 100vh;
     padding: 0 10px;
     display: flex;
-    background: #b5b8bd;
+
     justify-content: center;
     align-items: center;
 }
@@ -146,3 +150,9 @@ form button {
 form button:hover {
     background: #4954d0;
 }
+
+h3{
+    padding-bottom: 50px;
+}
+
+
