--- a/client/src/app/pages/film/film.component.html
+++ b/client/src/app/pages/film/film.component.html
@@ -1,7 +1,6 @@
-<p>film works!</p>
-<button (click)="getFilm()">
-  get film
-</button>
+
 <div *ngIf="films">
-  <app-film-card [film]="films[0]"></app-film-card>
+  <div *ngFor="let film of films">
+    <app-film-card [film]="film"></app-film-card>
+  </div>
 </div>
